Changed Launch Date

--- a/index.html
+++ b/index.html
@@ -344,6 +344,9 @@
             <div class="hero-badge">🚀 Early Access - Limited Time</div>
             <h1 class="headline">Stop Applying to Jobs That Ignore You</h1>
             <p class="subheadline">The LinkedIn + Google Sheets system that turns job searching from desperate to strategic — in just 15 minutes a day.</p>
+            <div style="margin-top: 20px; padding: 15px; background: rgba(102, 126, 234, 0.1); border-radius: 10px; font-size: 0.95rem; color: #4a5568;">
+                <strong>Built by an Ex-Googler</strong> who landed 11 interviews with just 1 strategic LinkedIn post
+            </div>
         </div>
 
         <div class="problems">
@@ -439,7 +442,7 @@
             </div>
             
             <div class="urgency">
-                ⏰ Launching September 15th - Early bird pricing ends soon
+                ⏰ Launching August 30th - Early bird pricing ends soon
             </div>
             
             <div class="guarantee">
